# Alfano

./: .gitignore  AlfanoChebyshev.py  AlfanoControlVariable.py  AlfanoLib.py  AlfanoStateEqLib.py  DecoderIssueDescription.txt  ExportControls.py  GenerateControlTable.py  MANIFEST  MANIFEST.in  README-BUILD.txt  README.txt  YawAngles.py  __init__.py  eccentricity.py  ipythondebugtrace.html  propellant_plots.py  pyproject.toml  setup.cfg  setup.py
ControlsPackage/: Controls-0.20.json  Controls-0.21.json  Controls-0.22.json  Controls-0.23.json  Controls-0.24.json  Controls-0.25.json  Controls-0.26.json  Controls-0.27.json  Controls-0.28.json  Controls-0.29.json  Controls-0.30.json  Controls-0.31.json  Controls-0.32.json  Controls-0.33.json  Controls-0.34.json  Controls-0.35.json  Controls-0.3525.json  Controls-0.3530.json  Controls-0.3535.json  Controls-0.3540.json  Controls-0.3545.json  Controls-0.3550.json  Controls-0.3555.json  Controls-0.3560.json  Controls-0.3565.json  Controls-0.3570.json  Controls-0.3575.json  Controls-0.3585.json  Controls-0.36.json  Controls-0.3615.json  Controls-0.3625.json  Controls-0.3630.json  Controls-0.3635.json  Controls-0.3640.json  Controls-0.3645.json  Controls-0.3650.json  Controls-0.3655.json  Controls-0.3660.json  Controls-0.3665.json  Controls-0.3670.json  (+75 more)
alfano/: README.txt  __init__.py
asat_traj_plot/: PlotTrajGEO.py
controls/: GenerateControlTable.py  YawAngles.py
doc/: HOWTO-Alfano Utilities and Controls.docx  HOWTO-Alfano_Utilities_and_Controls.docx  LowThrustCombinedManeuvers_AlfanoMethod.docx
src/: README.txt  (+1 more)
(+18 files in other folders)
