[metadata]
name = alfano
version = 0.5a1
description = Edelbaum-Alfano libraries
long_description = file: README.txt
long_description_content_type = text/markdown
author = Colin Helms
author_email=colinhelms@outlook.com
url = https://github.com/a093130/Alfano
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: End Users
    Operating System :: Microsoft :: Windows 10
    Operating System :: Linux :: Ubuntu 18.4
    Programming Language :: Python :: 3.4
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Mathematics
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = == 3.7

[options.packages.find]
where = src